<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".jobmanagement.JobFormActivity"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Job Posting Form"
            android:textSize="22dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.067"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/jobTitle"
            android:layout_width="294dp"
            android:layout_height="42dp"
            android:ems="7"
            android:hint="Job title"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintVertical_bias="0.053" />

        <EditText
            android:id="@+id/jobType"
            android:layout_width="294dp"
            android:layout_height="42dp"
            android:ems="7"
            android:hint="Job type"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/jobTitle"
            app:layout_constraintVertical_bias="0.085" />

        <EditText
            android:id="@+id/Duration"
            android:layout_width="294dp"
            android:layout_height="42dp"
            android:ems="7"
            android:hint="Duration (hours)"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.487"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description"
            app:layout_constraintVertical_bias="0.025" />


        <EditText
            android:id="@+id/payRate"
            android:layout_width="294dp"
            android:layout_height="42dp"
            android:ems="7"
            android:hint="Pay rate"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.487"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Duration"
            app:layout_constraintVertical_bias="0.024" />

        <fragment
            android:id="@+id/jobLocation"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="291dp"
            android:layout_height="272dp"
            android:layout_marginTop="28dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/payRate"
            tools:context=".jobmanagement.JobFormActivity" />

        <Button
            android:id="@+id/post"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="POST"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/jobLocation" />

        <EditText
            android:id="@+id/description"
            android:layout_width="294dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:gravity="start|top"
            android:hint="Description"
            android:inputType="textMultiLine"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.487"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/jobType" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>